# production-ml

./: .flake8  .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.github/: workflows.yml
.github/workflows/: ci-cd.yml
docs/: api.md  architecture.md  deployment.md  development.md
models/: xgb_model.pkl
notebooks/: 02.feature_engineering.ipynb  03.model_training.ipynb  04.XG_boost.ipynb  05.hyperparameter_tunning.ipynb  06.aws_s3.ipynb
src/api/: main.py
src/batch/: run_batch.py
src/config/: logging.py  settings.py
src/feature_pipeline/: feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: inference.py
src/model_training/: eval.py  train.py  tune.py
src/utils/: exceptions.py  logging_config.py
test/: data_quality.py  test_features.py  test_inference.py  test_training.py
