[project]
name = "housing-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.25",
    "category-encoders>=2.9.0",
    "evidently>=0.7.20",
    "fastapi>=0.128.0",
    "great-expectations>=1.10.0",
    "kaggle>=1.8.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "polars>=1.37.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=9.0.2",
    "structlog>=24.0.0",
    "python-multipart>=0.0.6",
    "streamlit>=1.28.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.24.0",
    "xgboost>=3.1.3",
]

[tool.isort]
profile = "black"
